# TeamMarusya

./: .gitignore  .~lock.Lenta_sample.csv#  AGENTS.md  README.md  label_quotes.py  labeled_news.json  main.py  medvedev_news.json  pyproject.toml  quote_extractor.ipynb  quotes_test.py  rianews.py  rubert.ipynb  rubert_tiny2.ipynb  session_name.session  site_parsers.py  train_model.py  train_toxic_classifier.py  water_analyzer.py
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md
backend/: README.md  pyproject.toml
backend/src/api/: app.py  routes.py  schemas.py  schemas_water.py
backend/src/lib/: water_config.py
backend/src/services/: analyzer.py  sentiment_adapter.py  water_detector.py
backend/tests/: conftest.py
backend/tests/contract/: test_analyze_contract.py  test_analyze_validation.py
backend/tests/integration/: test_analyze_flow.py  test_determinism.py
backend/tests/unit/: test_freshness.py  test_quotes.py
code/components/: freshness.py  pyproject.toml
code/klikbait/: predict.py
code/parser/: main.py  pyproject.toml  quotes_advanced.py  quotes_test.py  site_parsers.py
code/sentimen_analiz/: .gitignore  main.py  pyproject.toml  train_model.py  Текстовый файл.txt
code/water/: inspect_logreg_model.py  logreg_water_model.pkl  pyproject.toml  water_analyzer.py  water_detector.py
frontend/: package-lock.json
frontend/app/api/analyze/: route.ts
frontend/app/components/: AnalysisResult.tsx  AnalyzePageClient.tsx
rubert_finetuned/: config.json
rubert_toxic_classifier/: config.json  label_map.json
specs/001-clickbait-check/: plan.md  research.md  spec.md  tasks.md
specs/001-clickbait-check/checklists/: requirements.md
specs/001-clickbait-check/contracts/: clickbait-analyze.yaml
specs/001-freshness-quote-sentiment/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-news-analysis-mvp/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-water-detection/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-clickbait-check/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
(+7 files in other folders)
