[project]
name = "teammarusya"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "chonkie>=1.4.2",
    "jupyter>=1.1.1",
    "kagglehub>=0.3.13",
    "pandas>=2.3.3",
    "sklearn-model>=0.0.6",
    "torch>=2.9.0",
    "transformers>=4.57.1",
]
