[project]
name = "models2"
version = "0.1.0"
description = "Sentiment analysis for Russian news using rubert-tiny-sentiment-balanced"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"torch",
	"transformers",
	"scikit-learn",
	"numpy",
	"tqdm",
	"datasets", # для совместимости с Trainer, если потребуется
	"safetensors>=0.7.0",
	"accelerate>=1.12.0",
]


